Imaginnovate: Student Management

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 # Datasource Configuration
 spring.datasource.url= jdbc:sqlserver://localhost:1433;databaseName=student_db
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=ap123
 spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
 
 # JPA Configuration
